About: A p5.js tropical cyclone simulation game

v20190401a:
    + Added Atlantic basin map
    * Fixed bug with tropical depressions not numbered in loaded basins
    - April Fools! No Atlantic basin map. SAD!
v20190321a:
    * Atlantic name list preset names "Florence" and "Michael" retired and replaced with "Francine" and "Milton"
        > Does not affect old saved basins; only new basins
    - Removed curSeason as a global variable
v20190315a:
    * Storm damage/deaths is now calculated every tick instead of every advisory
v20190310a:
    + Added full saving/loading including active storms, analysis, and environmental data
    + Added safeguard in case one's localStorage quota is reached and they can no longer save
    * Autosaving now happens at the beginning of the 1st and 15th days of a month, rather than every 10 days as before
    * Saved seasons when not the current season nor currently viewed will eventually unload to be RAM-friendly (will automatically load when needed)
    * Fixed a corruption bug with the numerical array compression function
v20190305a:
    + Added 5 additional save slots for saved basins (besides autosave slot 0)
    + Added a load basin menu accessible from the main menu
        > includes the ability to delete saved basins
    + Added a save basin as... menu accessible from the in-sim side menu
    + Added an "Are you sure" dialog for certain actions
    + Added a button to the side menu to return to the main menu without saving
    * Basin saving test now includes the current environmental field data as of the tick saved
v20190228a:
    + Added save/load methods for ActiveSystem and NCMetadata (current environmental field data) classes
v20190225a:
    + Added save/load methods for Storm and StormRef classes
    * WIP (almost finished) season saving/loading algorithm now includes the storms (only TCs) in that season
    * Small change to saved basin localStorage keys to accomodate future sim options